examples/reference/for_unscoped_label_error.err
Assembly failed:
3: ERROR [asm202]
    3 | item .byte 1
^
ERROR: label 'item' not allowed inside .for (use .bfor for scoped repetition)
